--- a/spec/polaris-catalog-service.yaml
+++ b/spec/polaris-catalog-service.yaml
@@ -134,6 +134,9 @@ paths:
   /v1/{prefix}/namespaces/{namespace}/tables/{table}/notifications:
     $ref: './polaris-catalog-apis/notifications-api.yaml#/paths/~1v1~1{prefix}~1namespaces~1{namespace}~1tables~1{table}~1notifications'
 
+  /v1/{prefix}/namespaces/{namespace}/generic-tables:
+    $ref: './polaris-catalog-apis/generic-table-api.yaml#/paths/~1v1~1{prefix}~1namespaces~1{namespace}~1generic-tables'
+
 
 components:
   securitySchemes:
